@@ -5,12 +5,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.7</version>
+        <version>3.4.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>it.pagopa</groupId>
     <artifactId>pagopa-ecommerce-commons</artifactId>
-    <version>1.31.0</version>
+    <version>3.2.1</version>
     <licenses>
         <license>
             <name>EUPL 1.2 Public License</name>
@@ -25,9 +25,9 @@
     <name>pagopa-ecommerce-commons</name>
     <description>Utility library for pagoPA eCommerce</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
-        <jacoco.version>0.8.8</jacoco.version>
+        <jacoco.version>0.8.12</jacoco.version>
         <spotless.version>2.27.2</spotless.version>
     </properties>
     <dependencies>
@@ -86,6 +86,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -115,6 +116,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jdk8</artifactId>
+            <version>2.18.3</version>
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
@@ -265,8 +267,8 @@
                     <execution>
                         <id>default-compile</id>
                         <configuration>
-                            <source>17</source>
-                            <target>17</target>
+                            <source>21</source>
+                            <target>21</target>
                             <compilerArgs>-proc:none</compilerArgs>
                             <includes>
                                 <include>
@@ -282,23 +284,20 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
-                            <source>17</source>
-                            <target>17</target>
-                            <compilerArgs>--enable-preview</compilerArgs>
+                            <source>21</source>
+                            <target>21</target>
                         </configuration>
                     </execution>
                 </executions>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>${argLine} --enable-preview</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -351,7 +350,7 @@
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>6.2.1</version>
+                <version>7.13.0</version>
                 <executions>
                     <execution>
                         <id>transactions-dtos</id>
@@ -373,6 +372,8 @@
                                 <skipDefaultInterface>true</skipDefaultInterface>
                                 <useSwaggerUI>false</useSwaggerUI>
                                 <reactive>true</reactive>
+                                <useJakartaEe>true</useJakartaEe>
+                                <useSpringBoot3>true</useSpringBoot3>
                             </configOptions>
                         </configuration>
                     </execution>
@@ -439,9 +440,35 @@
                             <configOptions>
                                 <swaggerAnnotations>false</swaggerAnnotations>
                                 <openApiNullable>false</openApiNullable>
+                                <useJakartaEe>true</useJakartaEe>
+                                <useSpringBoot3>true</useSpringBoot3>
                             </configOptions>
                             <modelPackage>it.pagopa.ecommerce.commons.generated.nodeforwarder.v1.dto</modelPackage>
                             <apiPackage>it.pagopa.ecommerce.commons.generated.nodeforwarder.v1.api</apiPackage>
+                            <modelNameSuffix>dto</modelNameSuffix>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>jwt-issuer-api-v1</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>
+                                https://raw.githubusercontent.com/pagopa/pagopa-jwt-issuer-service/refs/tags/0.3.4/api-spec/v1/openapi.yaml
+                            </inputSpec>
+                            <generatorName>java</generatorName>
+                            <library>webclient</library>
+                            <generateApiDocumentation>false</generateApiDocumentation>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                            <generateSupportingFiles>true</generateSupportingFiles>
+                            <configOptions>
+                                <swaggerAnnotations>false</swaggerAnnotations>
+                                <openApiNullable>false</openApiNullable>
+                            </configOptions>
+                            <modelPackage>it.pagopa.ecommerce.commons.generated.jwtissuer.v1.dto</modelPackage>
+                            <apiPackage>it.pagopa.ecommerce.commons.generated.jwtissuer.v1.api</apiPackage>
                             <modelNameSuffix>dto</modelNameSuffix>
                         </configuration>
                     </execution>
@@ -547,9 +574,6 @@
                 </reportSets>
                 <configuration>
                     <failOnWarnings>true</failOnWarnings>
-                    <additionalOptions>
-                        <additionalOption>--enable-preview</additionalOption>
-                    </additionalOptions>
                     <excludePackageNames>
                         org.openapitools.*:it.pagopa.generated.*:it.pagopa.ecommerce.commons.generated.*
                     </excludePackageNames>
